What's new...

Jan 18/2016 : JF 10.7.0 released!
  - jfDHCP/0.3
    - support for multiple pools

Dec 27/2015 : JF 10.6.0 released!
  - jfBroadcast/0.34
    - fix tray icon
  - jfPaint/0.21
    - add enter/escape hot keys to dialog boxes
  - jfVNC/0.1
    - first release as seperate project

Dec 17/2015 : JF 10.5.0 released!
  - jfPaint/0.20
    - misc fixes
  - jfBroadcast/0.33
    - minor fix
  - NEW: javaforce.utils.RunAs
    - gui to run psexec (runas) (windows)
  - jfPasswords/0.15 - 0.16
    - 0.15 : changed startup behaviour (do not show window on startup)
    - 0.16 : added 'avoid ambiguous chars' option

Sept 24/2015 : JF 10.4.0 released!
  - SIPClient : added display name
  - added javaforce.JFLockFile
  - jPhoneLite/1.9.9 released!
    - desktop and android released
    - added display name support
    - use JFLockFile to prevent multiple copies running
  - jfBroadcast/0.32 released!
    - added display name support
    - use JFLockFile to prevent multiple copies running
    - hide password
    - added option to close app when closing window
  - did some work on getting jfLinux built - neither ISO will boot though :(

Sept 12/2015 : JF 10.3.0 released!
  - SIPClient
    - fix : contact field updated if received ip/port changes
    - fix : reregister()s if received ip/port changes
  - jPhoneLite/1.9.8 released!
    - desktop and android

Sept 10/2015 : JF 10.2.0 released!
  - jfProxy/0.3 released!
    - fixed host:port parsing

Aug 27/2015 : JF 10.1.0 released!
  - added GLMatrix.lookAt()

Aug 18/2015 : JF 10.0.0 released!
  - JavaForce is now hosted exclusively at github.com/pquiring/javaforce
      see also : pquiring.github.io/javaforce
  - ant install task now requires "bits" property defined on the command line (Linux only)
      ex : ant install -Dbits=64
  - GLFW is now part of JavaForce to create OpenGL windows which should allow it to run on more platforms.