@@ -5,7 +5,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="home" value="."/>
-  <property name="version" value="10.7.0"/>
+  <property name="version" value="10.8.0"/>
 
   <import file="base.xml"/>
 
