@@ -1,5 +1,5 @@
 Package: jphonelite
-Version: 1.9.9
+Version: 1.9.10
 Architecture: @ARCH@
 Maintainer: Peter Quiring <pquiring@jflinux.org>
 Installed-Size: 1
