@@ -1,5 +1,9 @@
 What's new...
 
+Jan 22/2016 : JF 10.8.0 released!
+  - jPhoneLite/1.9.10
+    - fixed audio problem on some systems
+
 Jan 18/2016 : JF 10.7.0 released!
   - jfDHCP/0.3
     - support for multiple pools
